add video demonstrating full functionality of the CLI

--- a/output/team.html
+++ b/output/team.html
@@ -30,9 +30,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: A123</li>
+            <li class="list-group-item">ID: 123</li>
             <li class="list-group-item">Email: <a href="mailto:test@testemail.com">test@testemail.com</a></li>
-            <li class="list-group-item">Office number: G789</li>
+            <li class="list-group-item">Office number: A456</li>
         </ul>
     </div>
 </div>
@@ -43,21 +43,21 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: E654</li>
-            <li class="list-group-item">Email: <a href="mailto:test2@testemail.com">test2@testemail.com</a></li>
+            <li class="list-group-item">ID: B876</li>
+            <li class="list-group-item">Email: <a href="mailto:testtwo@testemail.com">testtwo@testemail.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/undefined" target="_blank" rel="noopener noreferrer">undefined</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Jacob</h2>
+        <h2 class="card-title">Lamont</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: I852</li>
-            <li class="list-group-item">Email: <a href="mailto:test3@testemail.com">test3@testemail.com</a></li>
+            <li class="list-group-item">ID: C765</li>
+            <li class="list-group-item">Email: <a href="mailto:testthree@testemail.com">testthree@testemail.com</a></li>
             <li class="list-group-item">School: undefined</li>
         </ul>
     </div>
