corrected issue that caused github and school output to return undefined

--- a/output/team.html
+++ b/output/team.html
@@ -30,35 +30,35 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 123</li>
-            <li class="list-group-item">Email: <a href="mailto:test@testemail.com">test@testemail.com</a></li>
-            <li class="list-group-item">Office number: A456</li>
+            <li class="list-group-item">ID: T123</li>
+            <li class="list-group-item">Email: <a href="mailto:test1@notreal.com">test1@notreal.com</a></li>
+            <li class="list-group-item">Office number: T234</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Ashley</h2>
+        <h2 class="card-title">Josh</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: B876</li>
-            <li class="list-group-item">Email: <a href="mailto:testtwo@testemail.com">testtwo@testemail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/undefined" target="_blank" rel="noopener noreferrer">undefined</a></li>
+            <li class="list-group-item">ID: J987</li>
+            <li class="list-group-item">Email: <a href="mailto:test3@notreal.com">test3@notreal.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/notarealgithub" target="_blank" rel="noopener noreferrer">notarealgithub</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Lamont</h2>
+        <h2 class="card-title">Jacob</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: C765</li>
-            <li class="list-group-item">Email: <a href="mailto:testthree@testemail.com">testthree@testemail.com</a></li>
-            <li class="list-group-item">School: undefined</li>
+            <li class="list-group-item">ID: J456</li>
+            <li class="list-group-item">Email: <a href="mailto:test2@notreal.com">test2@notreal.com</a></li>
+            <li class="list-group-item">School: Kennesaw State University</li>
         </ul>
     </div>
 </div>
